--- a/web/header.sass
+++ b/web/header.sass
@@ -66,7 +66,7 @@ $elements: 5
 $post-it-size: 5vw
 #post-it
     width: calc((100vw - $lcd-width) / 2)
-    position: aboslute
+    position: absolute
 
     img
         width: $post-it-size
