--- a/web/static/header.css
+++ b/web/static/header.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "FixedSys";
-  src: url("FSEX300.ttf");
+  src: url("assets/FSEX300.ttf");
 }
 #lcd {
   width: 40vw;
@@ -104,7 +104,7 @@ p:nth-child(5) {
   position: relative;
 }
 #post-it:nth-child(2) {
-  right: -60vw;
+  right: -68vw;
 }
 #post-it #note {
   position: absolute;
