--- a/web/template/header.html
+++ b/web/template/header.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div id="post-it"></div>
-    <div id="post-it"></div>
+    <div id="post-it">{{POST-IT-L}}</div>
+    <div id="post-it">{{POST-IT-R}}</div>
 
     <div id="lcd" class="center-horizontal">
         <object type="image/svg+xml" data="assets/lcd_dot_matrix.svg"></object>
@@ -25,5 +25,9 @@
 
             <!-- <canvas id="lcd-matrix-canvas" class="center" width="110" height="40"></canvas> -->
         </div>
+    </div>
+
+    <div id="content">
+        {{CONTENT}}
     </div>
 </body>
