--- a/web/template/header.html
+++ b/web/template/header.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Isospin</title>
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="styles.css">
 
     <script defer src="header.js"></script>
 </head>
