--- a/web/template/header.html
+++ b/web/template/header.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+
+    <iframe id="popup" src="test.md"></iframe>
+
     <div>
         <div id="post-it">{{POST-IT-L}}</div>
         <div id="post-it">{{POST-IT-R}}</div>
@@ -35,14 +38,11 @@
                 </h1>
             </div>
 
-            <div class="btn" onclick="this.classList.toggle('hover');">
-                <div class="inner">
-                    <div class="front"> <img src="assets/isospin.png"> </div>
-                    <div class="back"> hello </div>
-                </div>
+            <div class="btn">
+                <div class="front"> <img src="assets/isospin.png"> </div>
             </div>
-            <div class="btn"></div>
-            <div class="btn"></div>
         </div>
     </div>
+
+    <div id="cover"></div>
 </body>
